Fixed grid auto-fit stretching

--- a/tutorial_index/static/scss/main.scss
+++ b/tutorial_index/static/scss/main.scss
@@ -47,7 +47,7 @@ header {
   cursor: pointer;
 }
 .tutorials {
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   max-width: 100%;
   gap: 30px;
 }
